--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -11,7 +11,7 @@ block content
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-4 shadow")
-        form(class="space-y-5 px-4")
+        form(class="space-y-5 px-4" method='POST' action='/auth/signup')
           input(
             class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
             name="name"
