--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -10,25 +10,33 @@ block content
       | Crear una cuenta
 
     div(class="mt-8 mx-auto max-w-sm")
-      div(class="bg-white py-8 px-4 shadow")
-        form(class="space-y-5 px-4" method='POST' action='/auth/signup')
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="name"
-            placeholder="Nombre"
-          )
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="email"
-            type="email"
-            placeholder="Correo electrónico"
-          )
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="password"
-            type="password"
-            placeholder="Contraseña"
-          )
+      div(class="bg-white py-8 px-8 shadow")
+        form(class="space-y-5" method='POST' action='/auth/signup' novalidate)
+          div
+            input(
+              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
+              name="name"
+              placeholder="Nombre"
+              value= locals.old('name')
+            )
+            +error('name')
+          div
+            input(
+              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
+              name="email"
+              type="email"
+              placeholder="Correo electrónico"
+              value= locals.old('email')
+            )
+            +error('email')
+          div
+            input(
+              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
+              name="password"
+              type="password"
+              placeholder="Contraseña"
+            )
+            +error('password')
           input(
             class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
             type="submit"
