--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -10,22 +10,26 @@ block content
       | Recupera tu cuenta
 
     div(class="mt-8 mx-auto max-w-sm")
-      div(class="bg-white py-8 px-4 shadow")
-        form(class="space-y-5 px-4")
+      div(class="bg-white py-8 px-8 shadow")
+        form(class="space-y-5" method='POST' action='/auth/reset-password' novalidate)
           p
             | Ingresa tu correo electrónico y te enviaremos un enlace
             | para que recuperes el acceso a tu cuenta.
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="email"
-            type="email"
-            placeholder="Correo electrónico"
-          )
-          input(
-            class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
-            type="submit"
-            value="Enviar enlace de restablecimiento"
-          )
+          div
+            input(
+              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
+              name="email"
+              type="email"
+              placeholder="Correo electrónico"
+              value= locals.old('email')
+            )
+            +error('email')
+          div
+            input(
+              class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
+              type="submit"
+              value="Enviar enlace de restablecimiento"
+            )
 
       div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
         a(
