--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -37,11 +37,12 @@ block content
               placeholder="Contraseña"
             )
             +error('password')
-          input(
-            class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
-            type="submit"
-            value="Regístrate"
-          )
+          div
+            input(
+              class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
+              type="submit"
+              value="Regístrate"
+            )
 
       div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
         p ¿Tienes una cuenta?
