--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -12,6 +12,9 @@ block content
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
         form(class="space-y-5" method='POST' action='/auth/login' novalidate)
+          if locals.flashes['registered user']
+            p(class="bg-amber-100 p-2 text-center")
+              | #{locals.flashes['registered user']}
           div
             input(
               class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
