--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,12 @@
 include _mixins
 
 doctype html
+block vars
 html(lang="es")
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title Bienes Raices | #{title}
+    title #{title} · Realty
     link(href='/css/styles.css' rel='stylesheet')
   body(class="min-h-screen bg-gray-50")
     main(class="container mx-auto px-2")
