--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,5 +1,8 @@
 extends ../layout
 
+block vars
+  - var title='Iniciar sesión'
+
 block content
   div(class="py-10")
     h1(class="my-10 text-4xl text-center font-extrabold")
