Add script to prevent double submits

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,3 +11,5 @@ html(lang="es")
   body(class="min-h-screen bg-gray-50")
     main(class="container mx-auto px-2")
       block content
+    script
+      include includes/script.js
