--- a/views/email/confirm.pug
+++ b/views/email/confirm.pug
@@ -4,7 +4,7 @@ p(style="font-family: sans-serif; font-size: 16px;") Recientemente creaste una c
 
 p(style="margin-top: 32px;")
   a(
-    href="#"
+    href=url
     style="font-family: sans-serif; padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white; font-size: 16px;"
   )
     | Confirmar correo
