--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -5,12 +5,9 @@ block vars
 
 block content
   div(class="py-10")
-    h1(class="my-10 text-4xl text-center font-extrabold")
-      | Bienes
-      span(class="font-normal")
-        | #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold")
-      | Iniciar sesión
+    h1(class="my-10 text-4xl text-center font-extrabold") Bienes
+      span(class="font-normal") #{' '} Raices
+    h2(class="text-2xl text-center font-extrabold") Iniciar sesión
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
@@ -24,7 +21,7 @@ block content
               name="email"
               type="email"
               placeholder="Correo electrónico"
-              value= locals.old('email')
+              value=locals.old('email')
             )
             +error('email')
           div
