--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -5,26 +5,21 @@ block vars
 
 block content
   div(class="py-10")
-    h1(class="my-10 text-4xl text-center font-extrabold")
-      | Bienes
-      span(class="font-normal")
-        | #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold")
-      | Recupera tu cuenta
+    h1(class="my-10 text-4xl text-center font-extrabold") Bienes
+      span(class="font-normal") #{' '} Raices
+    h2(class="text-2xl text-center font-extrabold") Recupera tu cuenta
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
         form(class="space-y-5" method='POST' action='/auth/reset-password' novalidate)
-          p
-            | Ingresa tu correo electrónico y te enviaremos un enlace
-            | para que recuperes el acceso a tu cuenta.
+          p Ingresa tu correo electrónico y te enviaremos un enlace para que recuperes el acceso a tu cuenta.
           div
             input(
               class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
               name="email"
               type="email"
               placeholder="Correo electrónico"
-              value= locals.old('email')
+              value=locals.old('email')
             )
             +error('email')
           div
