--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -5,12 +5,9 @@ block vars
 
 block content
   div(class="py-10")
-    h1(class="my-10 text-4xl text-center font-extrabold")
-      | Bienes
-      span(class="font-normal")
-        | #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold")
-      | Crear una cuenta
+    h1(class="my-10 text-4xl text-center font-extrabold") Bienes
+      span(class="font-normal") #{' '} Raices
+    h2(class="text-2xl text-center font-extrabold") Crear una cuenta
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
@@ -20,7 +17,7 @@ block content
               class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
               name="name"
               placeholder="Nombre"
-              value= locals.old('name')
+              value=locals.old('name')
             )
             +error('name')
           div
@@ -29,7 +26,7 @@ block content
               name="email"
               type="email"
               placeholder="Correo electrónico"
-              value= locals.old('email')
+              value=locals.old('email')
             )
             +error('email')
           div
