--- a/views/errors/404.pug
+++ b/views/errors/404.pug
@@ -5,6 +5,9 @@ block vars
 
 block content
   div(class="pt-20 text-center")
-    p(class="font-bold text-slate-800 text-xl") Esta página no está disponible
-    p(class="mt-4 text-slate-700") Es posible que el enlace que seleccionaste esté roto o que se haya eliminado la página.
-    a(class="block mt-8 text-indigo-700" href="/") Ir a la página de inicio
+    p(class="font-bold text-slate-800 text-xl")
+      | Esta página no está disponible
+    p(class="mt-4 text-slate-700")
+      | Es posible que el enlace que seleccionaste esté roto o que se haya eliminado la página.
+    a(class="block mt-8 text-indigo-700" href="/")
+      | Ir a la página de inicio
