--- a/views/email/confirm.pug
+++ b/views/email/confirm.pug
@@ -1,10 +1,11 @@
 p(style="font-family: sans-serif; font-size: 16px;") Hola, #{name}:
 
-p(style="font-family: sans-serif; font-size: 16px;") Recientemente creaste una cuenta con este correo electrónico. Haz clic en el botón de abajo para verificar tu correo electrónico.
+p(style="font-family: sans-serif; font-size: 16px;")
+  | Recientemente creaste una cuenta con este correo electrónico.
+  | Haz clic en el botón de abajo para verificar tu correo electrónico.
 
 p(style="margin-top: 32px;")
   a(
     href=url
     style="font-family: sans-serif; padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white; font-size: 16px;"
-  )
-    | Confirmar correo
+  ) Confirmar correo
