--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -1,13 +1,13 @@
 extends ../layout
 
 block vars
-  - var title='Recupera tu cuenta'
+  - var pageTitle='Recupera tu cuenta'
 
 block content
   div(class="py-10")
     h1(class="my-10 text-4xl text-center font-extrabold") Bienes
       span(class="font-normal") #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold") Recupera tu cuenta
+    h2(class="text-2xl text-center font-extrabold")= pageTitle
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
@@ -19,7 +19,7 @@ block content
               name="email"
               type="email"
               placeholder="Correo electrónico"
-              value=locals.old('email')
+              value= old('email')
             )
             +error('email')
           div
