--- a/views/errors/404.pug
+++ b/views/errors/404.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block vars
-  - var title='Página no disponible'
+  - var pageTitle='Página no disponible'
 
 block content
   div(class="pt-20 text-center")
