--- a/views/errors/500.pug
+++ b/views/errors/500.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block vars
-  - var title='Problemas en el servidor'
+  - var pageTitle='Problemas en el servidor'
 
 block content
   div(class="pt-20 text-center")
