--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -1,20 +1,24 @@
 extends ../layout
 
 block vars
-  - var pageTitle='Recupera tu cuenta'
+  - var pageTitle='¿Olvidaste tu contraseña?'
 
 block content
   div(class="py-10")
     h1(class="my-10 text-4xl text-center font-extrabold") Bienes
       span(class="font-normal") #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold")= pageTitle
+    h2(class="text-2xl text-center font-bold")= pageTitle
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
-        form(class="space-y-5" method='POST' action='/auth/reset-password' novalidate)
+        form(method='POST' action='/auth/reset-password' noValidate)
           +csrf
-          p Ingresa tu correo electrónico y te enviaremos un enlace para que recuperes el acceso a tu cuenta.
-          div
+          if flashes['reset password']
+            div(class="mb-5 bg-amber-100 p-2 text-center")
+              h3(class="font-bold") Revisa tu correo electrónico
+              p= flashes['reset password']
+          p(class="mb-5") Ingresa tu correo electrónico y te enviaremos las instrucciones para restablecer tu contraseña.
+          div(class="mb-5")
             input(
               class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
               name="email"
