--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -40,7 +40,7 @@ block content
             )
           a(
             class="block text-center text-sm text-indigo-500 hover:text-indigo-600"
-            href="/auth/reset-password"
+            href="/auth/request-recover"
           ) ¿Olvidaste tu contraseña?
 
       div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
