--- a/views/auth/request-recover.pug
+++ b/views/auth/request-recover.pug
@@ -17,7 +17,7 @@ block content
             div(class="mb-5 bg-amber-100 p-2 text-center")
               h3(class="font-bold") Revisa tu correo electrónico
               p= flashes['request recover']
-          p(class="mb-5") Ingresa tu correo electrónico y te enviaremos las instrucciones para restablecer tu contraseña.
+          p(class="mb-5") Ingresa tu correo electrónico y te enviaremos instrucciones para restablecer tu contraseña.
           div(class="mb-5")
             input(
               class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
