--- a/views/email/request-recover.pug
+++ b/views/email/request-recover.pug
@@ -6,7 +6,7 @@ div(style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;")
   p(style="margin: 32px 0;")
     a(
       href= url
-      style="font-family: sans-serif; padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white;"
+      style="padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white;"
       target="_blank"
     ) Restablecer contraseña
 
