--- a/views/auth/request-recover.pug
+++ b/views/auth/request-recover.pug
@@ -10,29 +10,28 @@ block content
     h2(class="text-2xl text-center font-bold")= pageTitle
 
     div(class="mt-8 mx-auto max-w-sm")
-      div(class="bg-white py-8 px-8 shadow")
-        form(method='POST' action='/auth/request-recover' noValidate)
-          +csrf
-          if flashes['request recover']
-            div(class="mb-5 bg-amber-100 p-2 text-center")
-              h3(class="font-bold") Revisa tu correo electrónico
-              p= flashes['request recover']
-          p(class="mb-5") Ingresa tu correo electrónico y te enviaremos instrucciones para restablecer tu contraseña.
-          div(class="mb-5")
-            input(
-              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-              name="email"
-              type="email"
-              placeholder="Correo electrónico"
-              value= old('email')
-            )
-            +error('email')
-          div
-            input(
-              class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
-              type="submit"
-              value="Enviar enlace de restablecimiento"
-            )
+      form(class="bg-white py-8 px-8 shadow" method='POST' action='/auth/request-recover' noValidate)
+        +csrf
+        if flashes['request recover']
+          div(class="mb-5 bg-amber-100 p-2 text-center")
+            h3(class="font-bold") Revisa tu correo electrónico
+            p= flashes['request recover']
+        p(class="mb-5") Ingresa tu correo electrónico y te enviaremos instrucciones para restablecer tu contraseña.
+        div(class="mb-5")
+          input(
+            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
+            name="email"
+            type="email"
+            placeholder="Correo electrónico"
+            value= old('email')
+          )
+          +error('email')
+        div
+          input(
+            class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
+            type="submit"
+            value="Enviar enlace de restablecimiento"
+          )
 
       div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
         a(
