--- a/views/email/confirm.pug
+++ b/views/email/confirm.pug
@@ -1,11 +1,13 @@
-p(style="font-family: sans-serif; font-size: 16px;") Hola, #{name}:
+div(style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;")
+  p Hola, #{name}:
 
-p(style="font-family: sans-serif; font-size: 16px;")
-  | Recientemente creaste una cuenta con este correo electrónico.
-  | Haz clic en el botón de abajo para verificar tu correo electrónico.
+  p Recientemente creaste una cuenta con este correo electrónico. Haz clic en el botón de abajo para confirmar tu cuenta.
 
-p(style="margin-top: 32px;")
-  a(
-    href= url
-    style="font-family: sans-serif; padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white; font-size: 16px;"
-  ) Confirmar correo
+  p(style="margin: 32px 0;")
+    a(
+      href= url
+      style="padding: 10px 32px; background-color: rgb(79 70 229); text-decoration: none; color: white;"
+      target="_blank"
+    ) Confirmar correo
+
+  p Si no creaste una cuenta, ignora este mensaje.
