Add app name to views

--- a/views/errors/403.pug
+++ b/views/errors/403.pug
@@ -7,6 +7,6 @@ block content
   div(class="pt-20 text-center")
     p(class="font-bold text-slate-800 text-xl")= pageTitle
     p(class="mt-4 text-slate-700")
-      | El acceso al recurso solicitado está prohibido
+      | El acceso al recurso solicitado está prohibido.
     a(class="block mt-8 text-indigo-700" href="/")
-      | Ir a la página de inicio
+      | Volver a #{APP_NAME}
