--- a/views/errors/404.pug
+++ b/views/errors/404.pug
@@ -10,4 +10,4 @@ block content
     p(class="mt-4 text-slate-700")
       | Es posible que el enlace que seleccionaste esté roto o que se haya eliminado la página.
     a(class="block mt-8 text-indigo-700" href="/")
-      | Ir a la página de inicio
+      | Volver a #{APP_NAME}
