--- a/views/errors/500.pug
+++ b/views/errors/500.pug
@@ -8,7 +8,6 @@ block content
     p(class="font-bold text-slate-800 text-xl")
       | Ha ocurrido un problema en el servidor
     p(class="mt-4 text-slate-700")
-      | Si el error persiste, por favor comuniquese con el administrador del sitio
+      | Si el error persiste, por favor comuniquese con el administrador del sitio.
     a(class="block mt-8 text-indigo-700" href="/")
-      | Ir a la página de inicio
-
+      | Volver a #{APP_NAME}
