--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html(lang="es")
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title= pageTitle ? pageTitle + ' · Realty' : 'Realty'
+    title= pageTitle ? pageTitle + ' · ' + APP_NAME : APP_NAME
     link(href='/css/styles.css' rel='stylesheet')
   body(class="min-h-screen bg-gray-50")
     main(class="container mx-auto px-2")
