add mixins to views

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,52 +1,34 @@
 extends ../layout
+include _mixins
 
 block vars
   - var pageTitle='Iniciar sesión'
 
 block content
   div(class="py-10")
-    h1(class="my-10 text-4xl text-center font-extrabold") Bienes
-      span(class="font-normal") #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold")= pageTitle
+    +header(pageTitle)
 
     div(class="mt-8 mx-auto max-w-sm")
-      form(class="bg-white py-8 px-8 shadow" method='POST' action='/auth/login' noValidate)
-        +csrf
+      div(class="bg-white py-8 px-8 shadow")
         if flashes['registered user']
-          div(class="mb-5 bg-amber-100 p-2 text-center")
-            h3(class="font-bold")= flashes['registered user']
-            p Te hemos enviado instrucciones para verificar tu correo.
+          +alert(flashes['registered user'], 'Te hemos enviado instrucciones para verificar tu correo.')
         if flashes['unverified email']
-          div(class="mb-5 bg-red-200 p-2 text-center")
-            h3(class="font-bold")= flashes['unverified email']
-            p Tu correo electrónico aún no ha sido verificado.
-        div(class="mb-5")
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="email"
-            type="email"
-            placeholder="Correo electrónico"
-            value= old('email')
-          )
-          +error('email')
-        div(class="mb-5")
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="password"
-            type="password"
-            placeholder="Contraseña"
-          )
-          +error('password')
-        div(class="mb-5")
-          input(
-            class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
-            type="submit"
-            value="Iniciar sesión"
-          )
-        a(
-          class="block text-center text-sm text-indigo-500 hover:text-indigo-600"
-          href="/auth/request-recover"
-        ) ¿Olvidaste tu contraseña?
+          +alert(flashes['unverified email'], 'Tu correo electrónico aún no ha sido verificado.', 'danger')
+
+        form(method='POST' action='/auth/login' noValidate)
+          +csrf
+          div(class="mb-5")
+            +input('email')(type="email" placeholder="Correo electrónico" value= old('email'))
+            +error('email')
+          div(class="mb-5")
+            +input('password')(type="password" placeholder="Contraseña")
+            +error('password')
+          div(class="mb-5")
+            +submit('Iniciar sessión')
+          a(
+            class="block text-center text-sm text-indigo-500 hover:text-indigo-600"
+            href="/auth/request-recover"
+          ) ¿Olvidaste tu contraseña?
 
       div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
         p ¿No tienes una cuenta?
