--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -1,39 +1,22 @@
 extends ../layout
+include _mixins
 
 block vars
-  - var pageTitle='Restablecer contraseña'
+  - var pageTitle='Crea una contraseña nueva'
 
 block content
   div(class="py-10")
-    h1(class="my-10 text-4xl text-center font-extrabold") Bienes
-      span(class="font-normal") #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold") Crea una contraseña segura
+    +header(pageTitle)
 
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
         form(method='POST' noValidate)
           +csrf
           div(class="mb-5")
-            input(
-              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-              name="password"
-              type="password"
-              placeholder="Contraseña nueva"
-              value= old('password')
-            )
+            +input('password')(type="password" placeholder="Contraseña nueva" value= old('password'))
             +error('password')
           div(class="mb-5")
-            input(
-              class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-              name="confirmPassword"
-              type="password"
-              placeholder="Repetir contraseña nueva"
-              value= old('confirmPassword')
-            )
+            +input('confirmPassword')(type="password" placeholder="Repetir contraseña nueva" value= old('confirmPassword'))
             +error('confirmPassword')
           div
-            input(
-              class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
-              type="submit"
-              value="Restablecer contraseña"
-            )
+            +submit('Restablecer contraseña')
