--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -1,48 +1,27 @@
 extends ../layout
+include _mixins
 
 block vars
   - var pageTitle='Crear una cuenta'
 
 block content
   div(class="py-10")
-    h1(class="my-10 text-4xl text-center font-extrabold") Bienes
-      span(class="font-normal") #{' '} Raices
-    h2(class="text-2xl text-center font-extrabold")= pageTitle
+    +header(pageTitle)
 
     div(class="mt-8 mx-auto max-w-sm")
       form(class="bg-white py-8 px-8 shadow" method='POST' action='/auth/signup' noValidate)
         +csrf
         div(class="mb-5")
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="name"
-            placeholder="Nombre"
-            value= old('name')
-          )
+          +input('name')(placeholder="Nombre" value= old('name'))
           +error('name')
         div(class="mb-5")
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="email"
-            type="email"
-            placeholder="Correo electrónico"
-            value= old('email')
-          )
+          +input('email')(type="email" placeholder="Correo electrónico" value= old('email'))
           +error('email')
         div(class="mb-5")
-          input(
-            class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
-            name="password"
-            type="password"
-            placeholder="Contraseña"
-          )
+          +input('password')(type="password" placeholder="Contraseña")
           +error('password')
         div
-          input(
-            class="bg-indigo-600 w-full rounded py-2 hover:bg-indigo-700 text-white text-sm font-bold cursor-pointer"
-            type="submit"
-            value="Regístrate"
-          )
+          +submit('Regístrate')
 
       div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
         p ¿Tienes una cuenta?
