--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -1,22 +1,18 @@
-extends ../layout
-include _mixins
+extends ../layout/index
 
 block vars
   - var pageTitle='Crea una contraseña nueva'
 
 block content
-  div(class="py-10")
-    +header(pageTitle)
+  +title(pageTitle)
 
-    div(class="mt-8 mx-auto max-w-sm")
-      div(class="bg-white py-8 px-8 shadow")
-        form(method='POST' noValidate)
-          +csrf
-          div(class="mb-5")
-            +input('password')(type="password" placeholder="Contraseña nueva" value= old('password'))
-            +error('password')
-          div(class="mb-5")
-            +input('confirmPassword')(type="password" placeholder="Repetir contraseña nueva" value= old('confirmPassword'))
-            +error('confirmPassword')
-          div
-            +submit('Restablecer contraseña')
+  div(class="mt-8 mx-auto max-w-sm")
+    div(class="bg-white py-8 px-8 shadow")
+      form(class="flex flex-col gap-y-5" method='POST' noValidate)
+        +csrf
+        div
+          +input('password')(type="password" placeholder="Contraseña nueva")
+        div
+          +input('confirmPassword')(type="password" placeholder="Repetir contraseña nueva")
+        div
+          +submit('Restablecer contraseña')(class="w-full")
