--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,38 +1,29 @@
-extends ../layout
-include _mixins
+extends ../layout/index
 
 block vars
   - var pageTitle='Iniciar sesión'
 
 block content
-  div(class="py-10")
-    +header(pageTitle)
+  +title(pageTitle)
 
-    div(class="mt-8 mx-auto max-w-sm")
-      div(class="bg-white py-8 px-8 shadow")
-        if flashes['registered user']
-          +alert(flashes['registered user'], 'Te hemos enviado instrucciones para verificar tu correo.')
-        if flashes['unverified email']
-          +alert(flashes['unverified email'], 'Tu correo electrónico aún no ha sido verificado.', 'danger')
+  div(class="mt-8 mx-auto max-w-sm")
+    div(class="bg-white p-8 shadow")
+      if flashes['registered user']
+        +alert(flashes['registered user'], 'Te hemos enviado instrucciones para verificar tu correo.')
+      if flashes['unverified email']
+        +alert(flashes['unverified email'], 'Tu correo electrónico aún no ha sido verificado.', 'danger')
 
-        form(method='POST' action='/auth/login' noValidate)
-          +csrf
-          div(class="mb-5")
-            +input('email')(type="email" placeholder="Correo electrónico" value= old('email'))
-            +error('email')
-          div(class="mb-5")
-            +input('password')(type="password" placeholder="Contraseña")
-            +error('password')
-          div(class="mb-5")
-            +submit('Iniciar sessión')
-          a(
-            class="block text-center text-sm text-indigo-500 hover:text-indigo-600"
-            href="/auth/request-recover"
-          ) ¿Olvidaste tu contraseña?
+      form(class="flex flex-col gap-y-5" method='POST' action='/auth/login' noValidate)
+        +csrf
+        div
+          +input('email')(type="email" placeholder="Correo electrónico")
+        div
+          +input('password')(type="password" placeholder="Contraseña")(value="")
+        div
+          +submit('Iniciar sessión')(class="w-full")
+        div(class="text-sm text-center")
+          +link('/auth/request-recover', '¿Olvidaste tu contraseña?')
 
-      div(class="bg-white mt-4 py-6 px-8 shadow text-center text-sm")
-        p ¿No tienes una cuenta?
-          a(
-            class="text-indigo-500 hover:text-indigo-600"
-            href="/auth/signup"
-          ) #{' '} Regístrate
+    div(class="bg-white mt-4 py-4 shadow text-center text-sm")
+      p ¿No tienes una cuenta? #{' '}
+        +link('/auth/signup', 'Regístrate')
