--- a/views/errors/404.pug
+++ b/views/errors/404.pug
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../layout/index
 
 block vars
   - var pageTitle='Página no disponible'
@@ -7,7 +7,6 @@ block content
   div(class="pt-20 text-center")
     p(class="font-bold text-slate-800 text-xl")
       | Esta página no está disponible
-    p(class="mt-4 text-slate-700")
+    p(class="my-4 text-slate-700")
       | Es posible que el enlace que seleccionaste esté roto o que se haya eliminado la página.
-    a(class="block mt-8 text-indigo-700" href="/")
-      | Volver a #{APP_NAME}
+    +link('/', `Volver a ${APP_NAME}`)
