Add properties view

--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,3 +1,8 @@
-header(class="bg-indigo-600 p-4 container mx-auto")
-  h1(class="text-2xl text-white font-extrabold text-center") Bienes
+header(class="bg-indigo-600 container flex justify-between mx-auto items-center p-4")
+  div(class="text-2xl text-white font-extrabold") Bienes
     span(class="font-normal") #{' '} Raices
+
+  nav(class="text-sm text-white font-bold md:flex md:items-center md:gap-3")
+    a(href="") Mis propiedades
+    a(href="") Mi perfil
+    a(class="bg-indigo-800 rounded-lg p-2 px-10" href="") Cerrar sesión
