--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -6,14 +6,13 @@ html(lang="es")
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title= pageTitle ? pageTitle + ' · ' + APP_NAME : APP_NAME
-    link(href='/css/styles.css' rel='stylesheet')
-  body(class="min-h-screen bg-gray-50")
+    title= (pageTitle ? pageTitle + ' · ' + APP_NAME : APP_NAME)
+    block head
+      link(href='/css/styles.css' rel='stylesheet')
+      script(src="/js/script.js" defer="true")
+  body(class="bg-gray-50")
     if user
       include header
 
-    main(class="container pt-10 mx-auto px-2")
+    main(class="container mx-auto mt-16 mb-10")
       block content
-
-    script
-      include script.js
