--- a/views/layout/_mixins.pug
+++ b/views/layout/_mixins.pug
@@ -1,10 +1,13 @@
 mixin csrf
   input(type='hidden' name='_token' value= csrfToken())
 
-mixin title(title)
-  h1(class="my-10 text-4xl text-center font-extrabold") Bienes
-    span(class="font-normal") #{' '} Raices
-  h2(class="text-2xl text-center font-bold")= title
+mixin error(name)
+  if locals.error(name)
+    each error in locals.error(name)
+      span(class="block text-sm text-red-700")= error
+
+mixin label(content)
+  label(class="block mb-1 text-sm text-gray-600 font-bold")&attributes(attributes)= content
 
 mixin input(name)
   input(
@@ -13,9 +16,30 @@ mixin input(name)
     name= name
     value= old(name)
   )&attributes(attributes)
-  if locals.error(name)
-    each error in locals.error(name)
-      span(class="block text-sm text-red-700")= error
+  +error(name)
+
+mixin textarea(name)
+  textarea(
+    class="w-full border border-gray-300 rounded outline-none px-3 py-1 placeholder-gray-500 focus:border-indigo-500"
+    id= name
+    name= name
+  )&attributes(attributes)= old(name)
+  +error(name)
+
+mixin select(name, placeholder = 'Elige una opcion')
+  select(
+    class="w-full border border-gray-300 rounded outline-none px-3 py-1 focus:border-indigo-500"
+    id= name
+    name= name
+  )
+    option(class="text-gray-500" value="")= placeholder
+    if block
+     block
+
+mixin optionNumbers(max = 5)
+  - let n = 1
+  while n <= max
+    option(value= n)= n++
 
 mixin submit(value)
   input(
@@ -38,25 +62,7 @@ mixin alert(title, message, type='')
     h3(class="font-bold")= title
     p= message
 
-mixin error(name)
-  if locals.error(name)
-    each error in locals.error(name)
-      span(class="block text-sm text-red-700")= error
-
-mixin label(content)
-  label(class="block mb-1 text-sm text-gray-600 font-bold")&attributes(attributes)= content
-
-mixin select(name, placeholder = 'Elige una opcion')
-  select(
-    class="w-full border border-gray-300 rounded outline-none px-3 py-1 focus:border-indigo-500"
-    id= name
-    name= name
-  )
-    option(class="text-gray-500" value="")= placeholder
-    if block
-     block
-
-mixin optionNumbers(max = 5)
-  - let n = 1
-  while n <= max
-    option(value= n)= n++
+mixin title(title)
+  h1(class="my-10 text-4xl text-center font-extrabold") Bienes
+    span(class="font-normal") #{' '} Raices
+  h2(class="text-2xl text-center font-bold")= title
