--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -32,9 +32,13 @@ block content
           div(class="md:w-1/2")
             +label('Categoría')(for="category")
             +select('category')
+              each category in categories
+                option(value=category.id)= category.name
           div(class="md:w-1/2")
             +label('Precio')(for="price")
             +select('price')
+              each price in prices
+                option(value=price.id)= price.range
         div(class="space-y-4 md:space-y-0 md:flex md:gap-4")
           div(class="md:w-1/3")
             +label('Habitaciones')(for="roomCount")
@@ -48,6 +52,7 @@ block content
             +label('Baños')(for="wcCount")
             +select('wcCount')
               +optionNumbers
+
         div(class="border-gray-200, border-t py-4")
           h3(class="leading-6 text-lg text-gray-900 font-medium") Ubicación
           p(class="text-gray-600") Ubica la propiedad en el mapa
