Save a property in the database

--- a/views/auth/confirm.pug
+++ b/views/auth/confirm.pug
@@ -4,7 +4,7 @@ block vars
   - var pageTitle='Cuenta verificada'
 
 block content
-  div(class="pt-20 text-center")
+  div(class="text-center")
     h1(class="mb-4 text-slate-800 text-2xl font-bold")= pageTitle
     p(class="mb-4 text-slate-800 text-lg") !Felicidades! Tu cuenta ha sido verificada.
     +link('/auth/login', 'Iniciar sessión')
