--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -20,6 +20,9 @@ block content
         div
           +input('password')(type="password" placeholder="Contraseña")(value="")
         div
+          div(class="mb-2")
+            input(type="checkbox" id="rememberMe" name="rememberMe" checked)
+            label(class="ml-2 text-sm text-gray-700" for="rememberMe") Mantener la sesión iniciada
           +submit('Iniciar sessión')(class="w-full")
         div(class="text-sm text-center")
           +link('/auth/request-recover', '¿Olvidaste tu contraseña?')
