Fix multiple attributes in pug

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -18,7 +18,7 @@ block content
         div
           +input('email')(type="email" placeholder="Correo electrónico")
         div
-          +input('password')(type="password" placeholder="Contraseña")(value="")
+          +input('password')(type="password" placeholder="Contraseña" value="")
         div
           div(class="mb-2")
             input(type="checkbox" id="rememberMe" name="rememberMe" checked)
