--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -15,7 +15,7 @@ block content
         div
           +input('email')(type="email" placeholder="Correo electrónico")
         div
-          +input('password')(type="password" placeholder="Contraseña")(value="")
+          +input('password')(type="password" placeholder="Contraseña" value="")
         div
           +submit('Regístrate')(class="w-full")
 
