--- a/views/auth/confirm.pug
+++ b/views/auth/confirm.pug
@@ -5,6 +5,6 @@ block vars
 
 block content
   div(class="text-center")
-    h1(class="mb-4 text-slate-800 text-2xl font-bold")= pageTitle
-    p(class="mb-4 text-slate-800 text-lg") !Felicidades! Tu cuenta ha sido verificada.
+    h1(class="mb-4 text-slate-800 font-bold")= pageTitle
+    p(class="mb-4 text-slate-800") !Felicidades! Tu cuenta ha sido verificada.
     +link('/auth/login', 'Iniciar sessión')
