--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -20,7 +20,7 @@ block content
         div
           +input('password')(type="password" placeholder="Contraseña" value="")
         div
-          div(class="mb-2")
+          div(class="mb-2 flex")
             input(type="checkbox" id="rememberMe" name="rememberMe" checked)
             label(class="ml-2 text-sm text-gray-700" for="rememberMe") Mantener la sesión iniciada
           +submit('Iniciar sessión')(class="w-full")
