--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -52,12 +52,12 @@ block content
           +select('wcCount')
             +optionNumbers('wcCount')
 
-      div(class="border-gray-200, border-t py-4")
+      div(class="border-gray-200")
         h3(class="leading-6 text-lg text-gray-900 font-medium") Ubicación
         p(class="text-gray-600") Ubica la propiedad en el mapa
         +error('lat')
 
-        div(id="map" class="mt-4 h-96")
+        div(id="map" class="mt-2 h-96")
         div
           p(id="street-info" class="mt-2")
         input(type="hidden" name="street" id="street" value= old('street'))
