--- a/views/properties/index.pug
+++ b/views/properties/index.pug
@@ -6,4 +6,4 @@ block vars
 block content
   +title(pageTitle)
 
-  +link('/propeties/create', 'Publicar propiedades', 'btn')
+  +link('/properties/create', 'Publicar propiedades', 'btn')
