Refactor and add mixins

--- a/views/auth/forgot-password.pug
+++ b/views/auth/forgot-password.pug
@@ -7,13 +7,15 @@ block content
   +title(pageTitle)
 
   div(class="mt-8 mx-auto max-w-sm")
-    div(class="bg-white p-8 shadow" )
-      if flashes['request recover']
-        +alert(flashes['request recover'], 'Te hemos enviado instrucciones para restablecer tu contraseña.')
+    div(class="bg-white p-8 shadow")
+      if flashes['forgot password']
+        div(class="mb-4 text-center")
+          +alert-info('Te hemos enviado instrucciones para restablecer tu contraseña.', flashes['forgot password'])
       if flashes['unverified email']
-        +alert(flashes['unverified email'], 'Tu correo electrónico aún no ha sido verificado.', 'danger')
+        div(class="mb-4 text-center")
+          +alert-danger('Tu correo electrónico aún no ha sido verificado.', flashes['unverified email'])
 
-      form(class="flex flex-col gap-y-5" method='POST' action='/auth/request-recover' noValidate)
+      form(class="flex flex-col gap-y-5" method='POST' action='/auth/forgot-password' noValidate)
         +csrf
         p Ingresa tu correo electrónico y te enviaremos instrucciones para restablecer tu contraseña.
         div
