--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -9,9 +9,14 @@ block content
   div(class="mt-8 mx-auto max-w-sm")
     div(class="bg-white p-8 shadow")
       if flashes['registered user']
-        +alert(flashes['registered user'], 'Te hemos enviado instrucciones para verificar tu correo.')
+        div(class="mb-4 text-center")
+          +alert-info('Te hemos enviado instrucciones para verificar tu correo.', flashes['registered user'])
       if flashes['unverified email']
-        +alert(flashes['unverified email'], 'Tu correo electrónico aún no ha sido verificado.', 'danger')
+        div(class="mb-4 text-center")
+          +alert-danger('Tu correo electrónico aún no ha sido verificado.', flashes['unverified email'])
+      if flashes['account restored']
+        div(class="mb-4 text-center")
+          +alert-success('Pueden iniciar sesión con tu nueva contraseña.', flashes['account restored'])
 
       form(class="flex flex-col gap-y-5" method='POST' action='/auth/login' noValidate)
         +csrf
@@ -25,7 +30,7 @@ block content
             label(class="ml-2 text-sm text-gray-700" for="rememberMe") Mantener la sesión iniciada
           +submit('Iniciar sessión')(class="w-full")
         div(class="text-sm text-center")
-          +link('/auth/request-recover', '¿Olvidaste tu contraseña?')
+          +link('/auth/forgot-password', '¿Olvidaste tu contraseña?')
 
     div(class="bg-white mt-4 py-4 shadow text-center text-sm")
       p ¿No tienes una cuenta? #{' '}
